--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ var actionbardata = {"siteID":"222103560","siteURL":"http:\/\/zeufinance.wordpre
 
 
 
-<p class="has-text-align-center has-background-color has-text-color has-link-color has-medium-font-size wp-elements-67c1d84d89029760757b71be6f08d48a"><strong><mark style="background-color:rgba(0, 0, 0, 0);color:#000000" class="has-inline-color"><a href="#">admin@meltproject.net</a></mark></strong></p>
+<p class="has-text-align-center has-background-color has-text-color has-link-color has-medium-font-size wp-elements-67c1d84d89029760757b71be6f08d48a"><strong><mark style="background-color:rgba(0, 0, 0, 0);color:#000000" class="has-inline-color"><a href="#">info@mattfurie.io</a></mark></strong></p>
 
 
 
